--- a/tenzies_game/src/App.css
+++ b/tenzies_game/src/App.css
@@ -47,8 +47,14 @@ button{
     border: none;
     border-radius: 8px;
     margin-bottom: 4rem;
+   
 }
-
+button:focus{
+    outline: none;
+}
+button:active {
+    box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+}
 .dice_container{
     display: flex;
     gap:2rem;
